--- a/docs/latex/main_8c.tex
+++ b/docs/latex/main_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.15.0/lab\+\_\+3/\+Core/\+Src/main.c File Reference}
-\hypertarget{main_8c}{}\label{main_8c}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/main.c@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/main.c}}
+\doxysection{Core/\+Src/main.c File Reference}
+\hypertarget{main_8c}{}\label{main_8c}\index{Core/Src/main.c@{Core/Src/main.c}}
 
 
 \+: Main program body for controlling motors using PWM signals and capturing input from a remote control.  
