--- a/docs/latex/motor__driver3_8c.tex
+++ b/docs/latex/motor__driver3_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.15.0/lab\+\_\+3/\+Core/\+Src/motor\+\_\+driver3.c File Reference}
-\hypertarget{motor__driver3_8c}{}\label{motor__driver3_8c}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/motor\_driver3.c@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/motor\_driver3.c}}
+\doxysection{Core/\+Src/motor\+\_\+driver3.c File Reference}
+\hypertarget{motor__driver3_8c}{}\label{motor__driver3_8c}\index{Core/Src/motor\_driver3.c@{Core/Src/motor\_driver3.c}}
 
 
 \+: Motor driver implementation  
