--- a/docs/latex/radio__rec_8c.tex
+++ b/docs/latex/radio__rec_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.15.0/lab\+\_\+3/\+Core/\+Src/radio\+\_\+rec.c File Reference}
-\hypertarget{radio__rec_8c}{}\label{radio__rec_8c}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/radio\_rec.c@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/radio\_rec.c}}
+\doxysection{Core/\+Src/radio\+\_\+rec.c File Reference}
+\hypertarget{radio__rec_8c}{}\label{radio__rec_8c}\index{Core/Src/radio\_rec.c@{Core/Src/radio\_rec.c}}
 
 
 \+: Radio receiver implementation  
