--- a/docs/latex/radio__rec_8h.tex
+++ b/docs/latex/radio__rec_8h.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.15.0/lab\+\_\+3/\+Core/\+Inc/radio\+\_\+rec.h File Reference}
-\hypertarget{radio__rec_8h}{}\label{radio__rec_8h}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/radio\_rec.h@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/radio\_rec.h}}
+\doxysection{Core/\+Inc/radio\+\_\+rec.h File Reference}
+\hypertarget{radio__rec_8h}{}\label{radio__rec_8h}\index{Core/Inc/radio\_rec.h@{Core/Inc/radio\_rec.h}}
 
 
 \+: Header file for radio receiver functions  
