--- a/docs/latex/radio__rec_8h_source.tex
+++ b/docs/latex/radio__rec_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{radio\+\_\+rec.\+h}
-\hypertarget{radio__rec_8h_source}{}\label{radio__rec_8h_source}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/radio\_rec.h@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/radio\_rec.h}}
+\hypertarget{radio__rec_8h_source}{}\label{radio__rec_8h_source}\index{Core/Inc/radio\_rec.h@{Core/Inc/radio\_rec.h}}
 \mbox{\hyperlink{radio__rec_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ }
