--- a/docs/latex/stm32f4xx__hal__msp_8c.tex
+++ b/docs/latex/stm32f4xx__hal__msp_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.15.0/lab\+\_\+3/\+Core/\+Src/stm32f4xx\+\_\+hal\+\_\+msp.c File Reference}
-\hypertarget{stm32f4xx__hal__msp_8c}{}\label{stm32f4xx__hal__msp_8c}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/stm32f4xx\_hal\_msp.c@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/stm32f4xx\_hal\_msp.c}}
+\doxysection{Core/\+Src/stm32f4xx\+\_\+hal\+\_\+msp.c File Reference}
+\hypertarget{stm32f4xx__hal__msp_8c}{}\label{stm32f4xx__hal__msp_8c}\index{Core/Src/stm32f4xx\_hal\_msp.c@{Core/Src/stm32f4xx\_hal\_msp.c}}
 
 
 This file provides code for the MSP Initialization and de-\/\+Initialization codes.  
