--- a/docs/latex/stm32f4xx__it_8h_source.tex
+++ b/docs/latex/stm32f4xx__it_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{stm32f4xx\+\_\+it.\+h}
-\hypertarget{stm32f4xx__it_8h_source}{}\label{stm32f4xx__it_8h_source}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/stm32f4xx\_it.h@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/stm32f4xx\_it.h}}
+\hypertarget{stm32f4xx__it_8h_source}{}\label{stm32f4xx__it_8h_source}\index{Core/Inc/stm32f4xx\_it.h@{Core/Inc/stm32f4xx\_it.h}}
 \mbox{\hyperlink{stm32f4xx__it_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{/*\ USER\ CODE\ BEGIN\ Header\ */}}
