--- a/docs/latex/structmotor.tex
+++ b/docs/latex/structmotor.tex
@@ -54,4 +54,4 @@ Timer handle used for PWM generation
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.\+15.\+0/lab\+\_\+3/\+Core/\+Inc/\mbox{\hyperlink{motor__driver3_8h}{motor\+\_\+driver3.\+h}}\end{DoxyCompactItemize}
+Core/\+Inc/\mbox{\hyperlink{motor__driver3_8h}{motor\+\_\+driver3.\+h}}\end{DoxyCompactItemize}
