--- a/docs/latex/structradio.tex
+++ b/docs/latex/structradio.tex
@@ -38,4 +38,4 @@ Timer handle used for input capture
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.\+15.\+0/lab\+\_\+3/\+Core/\+Inc/\mbox{\hyperlink{radio__rec_8h}{radio\+\_\+rec.\+h}}\end{DoxyCompactItemize}
+Core/\+Inc/\mbox{\hyperlink{radio__rec_8h}{radio\+\_\+rec.\+h}}\end{DoxyCompactItemize}
