--- a/docs/latex/sysmem_8c.tex
+++ b/docs/latex/sysmem_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.15.0/lab\+\_\+3/\+Core/\+Src/sysmem.c File Reference}
-\hypertarget{sysmem_8c}{}\label{sysmem_8c}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/sysmem.c@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/sysmem.c}}
+\doxysection{Core/\+Src/sysmem.c File Reference}
+\hypertarget{sysmem_8c}{}\label{sysmem_8c}\index{Core/Src/sysmem.c@{Core/Src/sysmem.c}}
 
 
 STM32\+Cube\+IDE System Memory calls file.  
