--- a/docs/latex/main_8h.tex
+++ b/docs/latex/main_8h.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.15.0/lab\+\_\+3/\+Core/\+Inc/main.h File Reference}
-\hypertarget{main_8h}{}\label{main_8h}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/main.h@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/main.h}}
+\doxysection{Core/\+Inc/main.h File Reference}
+\hypertarget{main_8h}{}\label{main_8h}\index{Core/Inc/main.h@{Core/Inc/main.h}}
 
 
 \+: Header for \doxylink{main_8c}{main.\+c} file. This file contains the common defines of the application.  
