--- a/docs/latex/main_8h_source.tex
+++ b/docs/latex/main_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{main.\+h}
-\hypertarget{main_8h_source}{}\label{main_8h_source}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/main.h@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/main.h}}
+\hypertarget{main_8h_source}{}\label{main_8h_source}\index{Core/Inc/main.h@{Core/Inc/main.h}}
 \mbox{\hyperlink{main_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{/*\ USER\ CODE\ BEGIN\ Header\ */}}
