--- a/docs/latex/motor__driver3_8h.tex
+++ b/docs/latex/motor__driver3_8h.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.15.0/lab\+\_\+3/\+Core/\+Inc/motor\+\_\+driver3.h File Reference}
-\hypertarget{motor__driver3_8h}{}\label{motor__driver3_8h}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/motor\_driver3.h@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/motor\_driver3.h}}
+\doxysection{Core/\+Inc/motor\+\_\+driver3.h File Reference}
+\hypertarget{motor__driver3_8h}{}\label{motor__driver3_8h}\index{Core/Inc/motor\_driver3.h@{Core/Inc/motor\_driver3.h}}
 
 
 \+: Header file for motor driver functions  
