--- a/docs/latex/motor__driver3_8h_source.tex
+++ b/docs/latex/motor__driver3_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{motor\+\_\+driver3.\+h}
-\hypertarget{motor__driver3_8h_source}{}\label{motor__driver3_8h_source}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/motor\_driver3.h@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Inc/motor\_driver3.h}}
+\hypertarget{motor__driver3_8h_source}{}\label{motor__driver3_8h_source}\index{Core/Inc/motor\_driver3.h@{Core/Inc/motor\_driver3.h}}
 \mbox{\hyperlink{motor__driver3_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ }
