--- a/docs/latex/syscalls_8c.tex
+++ b/docs/latex/syscalls_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/\+Aaron Escamilla/\+STM32\+Cube\+IDE/workspace\+\_\+1.15.0/lab\+\_\+3/\+Core/\+Src/syscalls.c File Reference}
-\hypertarget{syscalls_8c}{}\label{syscalls_8c}\index{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/syscalls.c@{C:/Users/Aaron Escamilla/STM32CubeIDE/workspace\_1.15.0/lab\_3/Core/Src/syscalls.c}}
+\doxysection{Core/\+Src/syscalls.c File Reference}
+\hypertarget{syscalls_8c}{}\label{syscalls_8c}\index{Core/Src/syscalls.c@{Core/Src/syscalls.c}}
 
 
 STM32\+Cube\+IDE Minimal System calls file.  
